--- a/src/content/docs/fr/accessibility.mdx
+++ b/src/content/docs/fr/accessibility.mdx
@@ -8,11 +8,13 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> <br/>[En savoir plus](/fr/why-ai-podcast)
+>
+> <br />
+> [En savoir plus](/fr/why-ai-podcast)
 
 <SrtPlayer
   client:only="react"
-  audioSrc="/podcasts/accessibility.m4a"
+  audioSrc="/podcasts/accessibility.mp3"
   srtUrl="/podcasts/accessibility.srt"
 />
 
@@ -124,4 +126,3 @@ Elle améliore :
 - la **réputation** de la marque
 
 **Un produit accessible est un produit mieux conçu.**
-
