--- a/src/content/docs/fr/design-thinking/definition.mdx
+++ b/src/content/docs/fr/design-thinking/definition.mdx
@@ -8,11 +8,13 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> <br/>[En savoir plus](/fr/why-ai-podcast)
+>
+> <br />
+> [En savoir plus](/fr/why-ai-podcast)
 
 <SrtPlayer
   client:only="react"
-  audioSrc="/podcasts/design-thinking/explaination.m4a"
+  audioSrc="/podcasts/design-thinking/explaination.mp3"
   srtUrl="/podcasts/design-thinking/explaination.srt"
 />
 
@@ -73,9 +75,9 @@ Cette technique consiste à poser **5 fois la question "Pourquoi ?"** pour remon
 
 L’énoncé de problème doit :
 
-- Être **centré sur l’utilisateur
-- Expliquer **le problème sans suggérer de solution
-- Servir de **guide pour l’idéation
+- Être \*\*centré sur l’utilisateur
+- Expliquer \*\*le problème sans suggérer de solution
+- Servir de \*\*guide pour l’idéation
 
 ---
 
@@ -85,11 +87,11 @@ Cette technique permet de transformer un problème en question ouverte pour favo
 
 ### Formulation :
 
-*"Comment pourrions-nous [action] pour [utilisateur] afin de [résultat souhaité] ?"*
+_"Comment pourrions-nous [action] pour [utilisateur] afin de [résultat souhaité] ?"_
 
 ### Exemple :
 
-*"Comment pourrions-nous aider nos utilisateurs à changer leur billet de train de manière simple et efficace ?"*
+_"Comment pourrions-nous aider nos utilisateurs à changer leur billet de train de manière simple et efficace ?"_
 
 ---
 
@@ -103,7 +105,7 @@ Les **user stories** permettent de décrire une fonctionnalité du point de vue 
 
 **Exemple :**
 
-*"En tant que voyageur indécis, je veux pouvoir modifier mes billets de train afin de m’adapter plus facilement à mon emploi du temps."*
+_"En tant que voyageur indécis, je veux pouvoir modifier mes billets de train afin de m’adapter plus facilement à mon emploi du temps."_
 
 ---
 
