--- a/src/content/docs/fr/design-thinking/tests.mdx
+++ b/src/content/docs/fr/design-thinking/tests.mdx
@@ -11,7 +11,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
 <SrtPlayer
   client:only="react"
-  audioSrc="/podcasts/design-thinking/tests.m4a"
+  audioSrc="/podcasts/design-thinking/tests.mp3"
   srtUrl="/podcasts/design-thinking/tests.srt"
 />
 
