--- a/src/content/docs/fr/ux-mapping.mdx
+++ b/src/content/docs/fr/ux-mapping.mdx
@@ -6,15 +6,15 @@ weight: 5
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
-
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> <br/>[En savoir plus](/fr/why-ai-podcast)
-
+>
+> <br />
+> [En savoir plus](/fr/why-ai-podcast)
 
 <SrtPlayer
   client:only="react"
-  audioSrc="/podcasts/ux-mapping.m4a"
+  audioSrc="/podcasts/ux-mapping.mp3"
   srtUrl="/podcasts/ux-mapping.srt"
 />
 
