--- a/src/content/docs/fr/design-sprint/index.mdx
+++ b/src/content/docs/fr/design-sprint/index.mdx
@@ -8,86 +8,87 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> <br/>[En savoir plus](/fr/why-ai-podcast)
+>
+> <br />
+> [En savoir plus](/fr/why-ai-podcast)
 
 <SrtPlayer
   client:only="react"
-  audioSrc="/podcasts/design-sprint/introduction.m4a"
+  audioSrc="/podcasts/design-sprint/introduction.mp3"
   srtUrl="/podcasts/design-sprint/introduction.srt"
 />
 
-
 ## Qu’est-ce qu’un Design Sprint ?
 
-Le **Design Sprint** est une méthode de résolution de problèmes complexes en **4 à 5 jours**, basée sur :  
+Le **Design Sprint** est une méthode de résolution de problèmes complexes en **4 à 5 jours**, basée sur :
 
-- La **collaboration d’équipe**  
-- Le **prototypage rapide**  
-- Les **tests utilisateurs**  
+- La **collaboration d’équipe**
+- Le **prototypage rapide**
+- Les **tests utilisateurs**
 
 Créé par **Google Ventures** (Jake Knapp, John Zaretsky, Braden Kowitz), il est présenté dans le livre :  
-**Sprint: How to Solve Big Problems and Test New Ideas in Just Five Days (2016)**  
+**Sprint: How to Solve Big Problems and Test New Ideas in Just Five Days (2016)**
 
 ---
 
 ## Design Sprint vs Design Thinking
 
-- Le **Design Thinking** est une **approche générale** centrée utilisateur.  
-- Le **Design Sprint** est une **méthode concrète et rapide** pour l’appliquer.  
-- Processus **linéaire**, sans retour en arrière possible (contrairement au Design Thinking).  
+- Le **Design Thinking** est une **approche générale** centrée utilisateur.
+- Le **Design Sprint** est une **méthode concrète et rapide** pour l’appliquer.
+- Processus **linéaire**, sans retour en arrière possible (contrairement au Design Thinking).
 
 ---
 
 ## Étapes du Design Sprint 1.0 (5 jours)
 
-1. **Understand** : comprendre le problème  
-2. **Sketch** : proposer des idées  
-3. **Decide** : choisir une solution  
-4. **Prototype** : créer un prototype testable  
-5. **Test** : recueillir des retours utilisateurs  
+1. **Understand** : comprendre le problème
+2. **Sketch** : proposer des idées
+3. **Decide** : choisir une solution
+4. **Prototype** : créer un prototype testable
+5. **Test** : recueillir des retours utilisateurs
 
 ### Sprint 2.0 (version optimisée – 4 jours)
 
-- Réduction du temps, implication de l’équipe complète seulement sur 2 jours.  
-- Jour 1 matin : définition du problème  
-- Jour 1 après-midi : esquisses de solutions  
+- Réduction du temps, implication de l’équipe complète seulement sur 2 jours.
+- Jour 1 matin : définition du problème
+- Jour 1 après-midi : esquisses de solutions
 
 ---
 
 ## Équipe idéale (4 à 7 personnes)
 
-- **Décideur** : tranche et oriente  
-- **Facilitateur (Sprint Master)** : guide le sprint, reste neutre  
-- **Designer(s)** : conçoivent le prototype  
-- **Expert marketing** : garantit l’alignement stratégique  
-- **Expert technique** : valide la faisabilité  
-- **Service client** : connaît les utilisateurs  
-- **Expert financier** : estime coût / ROI  
+- **Décideur** : tranche et oriente
+- **Facilitateur (Sprint Master)** : guide le sprint, reste neutre
+- **Designer(s)** : conçoivent le prototype
+- **Expert marketing** : garantit l’alignement stratégique
+- **Expert technique** : valide la faisabilité
+- **Service client** : connaît les utilisateurs
+- **Expert financier** : estime coût / ROI
 
 ---
 
 ## Préparation nécessaire
 
-- Problématique claire + brief  
-- Calendriers bloqués  
-- Pas d’appareils connectés (sauf en distanciel)  
-- Recherche utilisateur préalable  
-- Salle adaptée + matériel : post-it, feutres, papier, etc.  
+- Problématique claire + brief
+- Calendriers bloqués
+- Pas d’appareils connectés (sauf en distanciel)
+- Recherche utilisateur préalable
+- Salle adaptée + matériel : post-it, feutres, papier, etc.
 
 ---
 
 ## Principes clés
 
-- L’intelligence collective prime sur le génie individuel  
-- Toutes les idées sont valables  
-- Chacun peut s’exprimer  
-- Prototype testable produit rapidement  
-- Les idées sont **visualisées** (pas juste discutées)  
+- L’intelligence collective prime sur le génie individuel
+- Toutes les idées sont valables
+- Chacun peut s’exprimer
+- Prototype testable produit rapidement
+- Les idées sont **visualisées** (pas juste discutées)
 
 ---
 
 ## À retenir
 
-- Le Design Sprint est **collaboratif**, **rapide** et **structuré**  
-- Nécessite une équipe engagée et bien préparée  
-- Ne convient pas à des problèmes trop vagues ou trop simples  
+- Le Design Sprint est **collaboratif**, **rapide** et **structuré**
+- Nécessite une équipe engagée et bien préparée
+- Ne convient pas à des problèmes trop vagues ou trop simples
