--- a/src/content/docs/fr/information-architecture.mdx
+++ b/src/content/docs/fr/information-architecture.mdx
@@ -8,11 +8,13 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> <br/>[En savoir plus](/fr/why-ai-podcast)
+>
+> <br />
+> [En savoir plus](/fr/why-ai-podcast)
 
 <SrtPlayer
   client:only="react"
-  audioSrc="/podcasts/information-architecture.m4a"
+  audioSrc="/podcasts/information-architecture.mp3"
   srtUrl="/podcasts/information-architecture.srt"
 />
 
