--- a/src/content/docs/fr/marketing/landing-page.mdx
+++ b/src/content/docs/fr/marketing/landing-page.mdx
@@ -8,11 +8,13 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> <br/>[En savoir plus](/fr/why-ai-podcast)
+>
+> <br />
+> [En savoir plus](/fr/why-ai-podcast)
 
 <SrtPlayer
   client:only="react"
-  audioSrc="/podcasts/marketing/landing-page.m4a"
+  audioSrc="/podcasts/marketing/landing-page.mp3"
   srtUrl="/podcasts/marketing/landing-page.srt"
 />
 
