--- a/src/content/docs/fr/marketing/rgpd.mdx
+++ b/src/content/docs/fr/marketing/rgpd.mdx
@@ -4,19 +4,19 @@ description: "Principes, droits et rôle du webdesigner dans l’application du 
 weight: 5
 ---
 
-
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> <br/>[En savoir plus](/fr/why-ai-podcast)
+>
+> <br />
+> [En savoir plus](/fr/why-ai-podcast)
 
 <SrtPlayer
   client:only="react"
-  audioSrc="/podcasts/marketing/rgpd.m4a"
+  audioSrc="/podcasts/marketing/rgpd.mp3"
   srtUrl="/podcasts/marketing/rgpd.srt"
 />
-
 
 Le RGPD est **la réglementation européenne** qui encadre la collecte et le traitement des données personnelles au sein de l’Union Européenne.
 
@@ -24,11 +24,11 @@ Le RGPD est **la réglementation européenne** qui encadre la collecte et le tra
 
 ## Objectifs pédagogiques
 
-- Comprendre ce qu’est une **donnée personnelle**  
-- Savoir ce que signifie **RGPD**  
-- Identifier les **principes fondamentaux** du RGPD  
-- Connaître les **droits des individus**  
-- Déterminer le **rôle du webdesigner** dans l’application du RGPD  
+- Comprendre ce qu’est une **donnée personnelle**
+- Savoir ce que signifie **RGPD**
+- Identifier les **principes fondamentaux** du RGPD
+- Connaître les **droits des individus**
+- Déterminer le **rôle du webdesigner** dans l’application du RGPD
 
 ---
 
@@ -36,97 +36,97 @@ Le RGPD est **la réglementation européenne** qui encadre la collecte et le tra
 
 Une **donnée personnelle** est toute information permettant d’**identifier directement ou indirectement une personne physique**.
 
-Exemples :  
+Exemples :
 
-- Nom, prénom  
-- Adresse postale, e-mail  
-- Identifiants en ligne, adresse IP  
-- Données sensibles (orientation politique, religieuse, santé…)  
+- Nom, prénom
+- Adresse postale, e-mail
+- Identifiants en ligne, adresse IP
+- Données sensibles (orientation politique, religieuse, santé…)
 
 ---
 
 ## Qu’est-ce que le RGPD ?
 
 > RGPD = Règlement Général sur la Protection des Données  
-> Adopté en 2016, appliqué depuis le **25 mai 2018**  
+> Adopté en 2016, appliqué depuis le **25 mai 2018**
 
 ### Objectif
 
-Renforcer les droits des individus et encadrer la façon dont les organisations traitent leurs données.  
+Renforcer les droits des individus et encadrer la façon dont les organisations traitent leurs données.
 
 ---
 
 ## Principes fondamentaux
 
-1. Transparence  
-2. Finalité légitime  
-3. Minimisation des données  
-4. Exactitude  
-5. Limitation de la conservation  
-6. Intégrité et confidentialité  
-7. Responsabilité (accountability)  
+1. Transparence
+2. Finalité légitime
+3. Minimisation des données
+4. Exactitude
+5. Limitation de la conservation
+6. Intégrité et confidentialité
+7. Responsabilité (accountability)
 
 ---
 
 ## Portée du RGPD
 
-Le RGPD s’applique à **toute organisation traitant des données personnelles de résidents de l’UE**, même si elle est située hors UE.  
+Le RGPD s’applique à **toute organisation traitant des données personnelles de résidents de l’UE**, même si elle est située hors UE.
 
-Cela inclut aussi les sites proposant des **produits ou services à des citoyens européens**.  
+Cela inclut aussi les sites proposant des **produits ou services à des citoyens européens**.
 
 ---
 
 ## Droits des individus
 
-| Droit | Description |
-| --- | --- |
-| Accès | Connaître les données collectées et leur usage |
-| Rectification | Corriger des données inexactes |
-| Effacement | Suppression des données ("droit à l’oubli") |
-| Limitation | Suspendre temporairement le traitement |
-| Portabilité | Transférer les données à un autre service |
-| Opposition | Refuser le traitement dans certains cas |
+| Droit         | Description                                    |
+| ------------- | ---------------------------------------------- |
+| Accès         | Connaître les données collectées et leur usage |
+| Rectification | Corriger des données inexactes                 |
+| Effacement    | Suppression des données ("droit à l’oubli")    |
+| Limitation    | Suspendre temporairement le traitement         |
+| Portabilité   | Transférer les données à un autre service      |
+| Opposition    | Refuser le traitement dans certains cas        |
 
 ---
 
 ## Responsabilités des entreprises
 
-- Mettre en place des **mesures de sécurité**  
-- Obtenir un **consentement explicite**  
-- **Nommer un DPO** (Data Protection Officer) si nécessaire  
-- **Notifier les violations de données** à la CNIL et aux utilisateurs  
+- Mettre en place des **mesures de sécurité**
+- Obtenir un **consentement explicite**
+- **Nommer un DPO** (Data Protection Officer) si nécessaire
+- **Notifier les violations de données** à la CNIL et aux utilisateurs
 
 ---
 
 ## Sanctions possibles
 
-Les entreprises non conformes s’exposent à des **amendes allant jusqu’à 20 millions € ou 4 % du CA mondial**.  
+Les entreprises non conformes s’exposent à des **amendes allant jusqu’à 20 millions € ou 4 % du CA mondial**.
 
-Exemples :  
+Exemples :
 
-- [British Airways et Marriott (Le Monde)](https://www.lemonde.fr/pixels/article/2020/11/02/british-airways-et-marriott-ecopent-de-lourdes-amendes-pour-des-donnees-personnelles-mal-securisees_6058212_4408996.html)  
-- [Sanctions CNIL 2023](https://www.cnil.fr/fr/la-cnil-prononce-six-nouvelles-sanctions-dans-le-cadre-de-sa-procedure-simplifiee)  
+- [British Airways et Marriott (Le Monde)](https://www.lemonde.fr/pixels/article/2020/11/02/british-airways-et-marriott-ecopent-de-lourdes-amendes-pour-des-donnees-personnelles-mal-securisees_6058212_4408996.html)
+- [Sanctions CNIL 2023](https://www.cnil.fr/fr/la-cnil-prononce-six-nouvelles-sanctions-dans-le-cadre-de-sa-procedure-simplifiee)
 
 ---
 
 ## Le rôle du webdesigner face au RGPD
 
-Le webdesigner **participe activement** à la conformité RGPD dès la conception du site.  
+Le webdesigner **participe activement** à la conformité RGPD dès la conception du site.
 
 ### Principes à appliquer
 
-- **Privacy by design & by default** : n’afficher que les champs strictement nécessaires  
-- **Consentement clair** : checkbox explicite, non pré-cochée  
-- **Transparence** : politique de confidentialité accessible  
-- **Gestion des cookies** : bannière, choix granulaire, possibilité de refuser  
-- **Accessibilité des droits** : formulaires pour accès / rectification / suppression des données  
-- **Sécurité** : design orienté sécurité (HTTPS, stockage sécurisé, etc.)  
-- **Collaboration** avec le DPO ou responsable du traitement  
+- **Privacy by design & by default** : n’afficher que les champs strictement nécessaires
+- **Consentement clair** : checkbox explicite, non pré-cochée
+- **Transparence** : politique de confidentialité accessible
+- **Gestion des cookies** : bannière, choix granulaire, possibilité de refuser
+- **Accessibilité des droits** : formulaires pour accès / rectification / suppression des données
+- **Sécurité** : design orienté sécurité (HTTPS, stockage sécurisé, etc.)
+- **Collaboration** avec le DPO ou responsable du traitement
 
 ---
 
 ## À retenir
 
-- Le RGPD protège **les droits fondamentaux** des citoyens européens  
-- Toute entreprise, même hors UE, est concernée si elle cible un public européen  
-- Le **webdesigner** joue un rôle clé : intégrer les bonnes pratiques dès la conception  
+- Le RGPD protège **les droits fondamentaux** des citoyens européens
+- Toute entreprise, même hors UE, est concernée si elle cible un public européen
+- Le **webdesigner** joue un rôle clé : intégrer les bonnes pratiques dès la conception
