Try to fix Accessibility

--- a/src/content/docs/fr/marketing/index.mdx
+++ b/src/content/docs/fr/marketing/index.mdx
@@ -131,6 +131,12 @@ _Exemple : Augmenter la portée des posts Instagram de +25 % en 6 mois_
 
 ### Exemples de KPIs
 
+<p id="kpi-desc" class="sr-only">
+Ce tableau liste les principaux KPI utilisés en marketing numérique et leur fonction.
+</p>
+
+<table aria-describedby="kpi-desc">
+
 | KPI                        | Pourquoi ?                        |
 | -------------------------- | --------------------------------- |
 | Taux de clics (CTR)        | Mesurer l’efficacité des annonces |
@@ -138,6 +144,8 @@ _Exemple : Augmenter la portée des posts Instagram de +25 % en 6 mois_
 | Portée / impressions       | Évaluer la visibilité             |
 | Taux de rebond             | Vérifier la pertinence des pages  |
 | Leads / Chiffre d’affaires | Objectifs business concrets       |
+
+</table>
 
 ---
 
