Correction de la balise <p> pour améliorer l'accessibilité des descriptions de KPI dans index.mdx.

--- a/src/content/docs/fr/marketing/index.mdx
+++ b/src/content/docs/fr/marketing/index.mdx
@@ -131,9 +131,7 @@ _Exemple : Augmenter la portée des posts Instagram de +25 % en 6 mois_
 
 ### Exemples de KPIs
 
-<p id="kpi-desc" class="sr-only">
-Ce tableau liste les principaux KPI utilisés en marketing numérique et leur fonction.
-</p>
+<p id="kpi-desc" class="sr-only">Ce tableau liste les principaux KPI utilisés en marketing numérique et leur fonction.</p>
 
 <table aria-describedby="kpi-desc">
 
