Ajout d'une légende pour améliorer l'accessibilité du tableau des KPI dans index.mdx.

--- a/src/content/docs/fr/marketing/index.mdx
+++ b/src/content/docs/fr/marketing/index.mdx
@@ -134,6 +134,7 @@ _Exemple : Augmenter la portée des posts Instagram de +25 % en 6 mois_
 <p id="kpi-desc" class="sr-only">Ce tableau liste les principaux KPI utilisés en marketing numérique et leur fonction.</p>
 
 <table aria-describedby="kpi-desc">
+ <caption class="sr-only">Tableau des KPI marketing et leur utilité</caption>
 
 | KPI                        | Pourquoi ?                        |
 | -------------------------- | --------------------------------- |
