Ajout d'un plugin de réhabilitation pour améliorer l'accessibilité des tableaux et mise à jour des dépendances dans package-lock.json.

--- a/src/content/docs/fr/marketing/index.mdx
+++ b/src/content/docs/fr/marketing/index.mdx
@@ -129,12 +129,7 @@ Les indicateurs de performance servent à :
 
 _Exemple : Augmenter la portée des posts Instagram de +25 % en 6 mois_
 
-### Exemples de KPIs
-
-<p id="kpi-desc" class="sr-only">Ce tableau liste les principaux KPI utilisés en marketing numérique et leur fonction.</p>
-
-<table aria-describedby="kpi-desc">
- <caption class="sr-only">Tableau des KPI marketing et leur utilité</caption>
+<caption value="Tableau des KPI marketing" />
 
 | KPI                        | Pourquoi ?                        |
 | -------------------------- | --------------------------------- |
@@ -144,7 +139,6 @@ _Exemple : Augmenter la portée des posts Instagram de +25 % en 6 mois_
 | Taux de rebond             | Vérifier la pertinence des pages  |
 | Leads / Chiffre d’affaires | Objectifs business concrets       |
 
-</table>
 
 ---
 
