Ajout de sections pour écouter les documents en version podcast dans plusieurs fichiers MDX.

--- a/src/content/docs/fr/continuous-improvement.mdx
+++ b/src/content/docs/fr/continuous-improvement.mdx
@@ -6,6 +6,8 @@ weight: 9
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 >
@@ -17,6 +19,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/continuous-improvement.mp3"
   srtUrl="/podcasts/continuous-improvement.srt"
 />
+</details>
 
 ## 1. Qu’est-ce que l’amélioration continue ?
 
