--- a/src/content/docs/fr/design-thinking/index.mdx
+++ b/src/content/docs/fr/design-thinking/index.mdx
@@ -6,6 +6,8 @@ weight: 0
 
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 >
@@ -17,6 +19,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/design-thinking/1.mp3"
   srtUrl="/podcasts/design-thinking/1.srt"
 />
+</details>
 
 Le **Design Thinking** est une méthode de résolution de problèmes **centrée sur l’utilisateur**, utilisée en entreprise pour stimuler la **créativité** et favoriser l’**innovation**.
 
