--- a/src/content/docs/fr/marketing/rgpd.mdx
+++ b/src/content/docs/fr/marketing/rgpd.mdx
@@ -6,6 +6,8 @@ weight: 5
 
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 >
@@ -17,6 +19,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/marketing/rgpd.mp3"
   srtUrl="/podcasts/marketing/rgpd.srt"
 />
+</details>
 
 Le RGPD est **la réglementation européenne** qui encadre la collecte et le traitement des données personnelles au sein de l’Union Européenne.
 
