--- a/src/content/docs/fr/marketing/strategy-social-media.mdx
+++ b/src/content/docs/fr/marketing/strategy-social-media.mdx
@@ -6,6 +6,8 @@ weight: 4
 
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 >
@@ -17,6 +19,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/marketing/strategy-social-media.mp3"
   srtUrl="/podcasts/marketing/strategy-social-media.srt"
 />
+</details>
 
 Le **marketing sur les réseaux sociaux** consiste à utiliser ces plateformes pour promouvoir une marque, un produit ou un service, tout en développant **visibilité, engagement et notoriété**.
 
