--- a/src/content/docs/fr/design-sprint/storyboarding-prototyping-testing.mdx
+++ b/src/content/docs/fr/design-sprint/storyboarding-prototyping-testing.mdx
@@ -6,6 +6,8 @@ weight: 3
 
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 >
@@ -17,6 +19,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/design-sprint/storyboarding-prototyping-testing.mp3"
   srtUrl="/podcasts/design-sprint/storyboarding-prototyping-testing.srt"
 />
+</details>
 
 ## Objectif
 
