--- a/src/content/docs/fr/design-thinking/definition.mdx
+++ b/src/content/docs/fr/design-thinking/definition.mdx
@@ -6,6 +6,8 @@ weight: 2
 
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 >
@@ -17,6 +19,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/design-thinking/explaination.mp3"
   srtUrl="/podcasts/design-thinking/explaination.srt"
 />
+</details>
 
 L’objectif principal est de **définir un problème précis** à résoudre, en se posant les bonnes questions :
 
