--- a/src/content/docs/fr/design-thinking/empathy.mdx
+++ b/src/content/docs/fr/design-thinking/empathy.mdx
@@ -6,6 +6,8 @@ weight: 1
 
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 >
@@ -17,6 +19,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/design-thinking/2.mp3"
   srtUrl="/podcasts/design-thinking/2.srt"
 />
+</details>
 
 ## Explications
 
