--- a/src/content/docs/fr/design-thinking/prototyping.mdx
+++ b/src/content/docs/fr/design-thinking/prototyping.mdx
@@ -6,6 +6,8 @@ weight: 4
 
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information  
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 
@@ -14,6 +16,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/design-thinking/prototyping.mp3"
   srtUrl="/podcasts/design-thinking/prototyping.srt"
 />
+</details>
 
 ## Objectifs de la phase de prototypage
 
