--- a/src/content/docs/fr/design-thinking/tests.mdx
+++ b/src/content/docs/fr/design-thinking/tests.mdx
@@ -6,6 +6,8 @@ weight: 5
 
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information  
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 
@@ -14,6 +16,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/design-thinking/tests.mp3"
   srtUrl="/podcasts/design-thinking/tests.srt"
 />
+</details>
 
 ## Objectifs de la phase de test
 
