--- a/src/content/docs/fr/information-architecture.mdx
+++ b/src/content/docs/fr/information-architecture.mdx
@@ -6,6 +6,8 @@ weight: 6
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 >
@@ -17,6 +19,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/information-architecture.mp3"
   srtUrl="/podcasts/information-architecture.srt"
 />
+</details>
 
 ## 1. Définition
 
