--- a/src/content/docs/fr/marketing/landing-page.mdx
+++ b/src/content/docs/fr/marketing/landing-page.mdx
@@ -6,6 +6,8 @@ weight: 2
 
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 >
@@ -17,6 +19,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/marketing/landing-page.mp3"
   srtUrl="/podcasts/marketing/landing-page.srt"
 />
+</details>
 
 ## Qu’est-ce qu’une Landing Page ?
 
