--- a/src/content/docs/fr/marketing/seo.mdx
+++ b/src/content/docs/fr/marketing/seo.mdx
@@ -6,6 +6,8 @@ weight: 3
 
 import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 >
@@ -17,6 +19,7 @@ import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/marketing/seo.mp3"
   srtUrl="/podcasts/marketing/seo.srt"
 />
+</details>
 
 ## Introduction au SEO (Search Engine Optimization)
 
