--- a/src/content/docs/fr/ux-mapping.mdx
+++ b/src/content/docs/fr/ux-mapping.mdx
@@ -6,6 +6,8 @@ weight: 5
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 >
@@ -17,6 +19,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/ux-mapping.mp3"
   srtUrl="/podcasts/ux-mapping.srt"
 />
+</details>
 
 ## 1. Qu’est-ce que l’UX Mapping ?
 
