--- a/src/content/docs/fr/ux-personas-and-empathy.mdx
+++ b/src/content/docs/fr/ux-personas-and-empathy.mdx
@@ -6,6 +6,8 @@ weight: 4
 
 import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
 
+<details>
+    <summary>Écouter en version Podcast</summary>
 > [!INFO] Information
 > Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
 >
@@ -17,6 +19,7 @@ import SrtPlayer from "../../../components/jsx/SrtPlayer.jsx";
   audioSrc="/podcasts/ux-personas-and-empathy.mp3"
   srtUrl="/podcasts/ux-personas-and-empathy.srt"
 />
+</details>
 
 ## 1. Qu’est-ce qu’un persona ?
 
